--- a/index.html
+++ b/index.html
@@ -77,13 +77,16 @@
                 <div class="plans">
                     <div class="types">
                         <div class="arcade">
-                            Arcade $9/mo
+                            <div class="arc">Arcade </div>
+                            <div class="price"> $9/mo</div>
                         </div>
                         <div class="advanced">
-                            Advanced $12/mo
+                            <div class="ad">Advanced</div>
+                            <div class="price2"> $12/mo</div>
                         </div>
                         <div class="pro">
-                            Pro $15/mo
+                            <div class="pr">Pro</div>
+                            <div class="price3"> $15/mo</div>
                         </div>
                     </div>
                     <div class="time-period">
