--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                             <div class="price2"> $12/mo</div>
                         </div>
                         <div class="pro">
-                            <div class="pr">Pro</div>
+                            <div class="pro">Pro</div>
                             <div class="price3"> $15/mo</div>
                         </div>
                     </div>
