--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                 <div class="plans">
                     <div class="types">
                         <div class="arcade">
+                            <img src="./assets/images/icon-arcade.svg" alt="Arcade">
                             <div class="arc">Arcade </div>
                             <div class="price"> $9/mo</div>
                         </div>
