--- a/index.html
+++ b/index.html
@@ -82,10 +82,12 @@
                             <div class="price"> $9/mo</div>
                         </div>
                         <div class="advanced">
+                            <img src="./assets/images/icon-advanced.svg" alt="Advanced">
                             <div class="ad">Advanced</div>
                             <div class="price2"> $12/mo</div>
                         </div>
                         <div class="pro">
+                            <img src="./assets/images/icon-pro.svg" alt="Pro">
                             <div class="pr">Pro</div>
                             <div class="price3"> $15/mo</div>
                         </div>
