--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <h2>Pick add-ons</h2>
                 <p>Add-ons help enhance your gaming experience.</p>
                 <div class="addons">
-                    <div class="Online">
+                    <div class="online">
                         <div class="service">
                             Online service Access to multiplayer games +$1/mo
                         </div>
