--- a/index.html
+++ b/index.html
@@ -112,8 +112,10 @@
                 <div class="addons">
                     <div class="online">
                         <div class="service">
-                            Online service Access to multiplayer games +$1/mo
+                            <h3>Online service</h3>
+                            <p>Access to multiplayer games</p>
                         </div>
+                        <div class="price1"> +$1/mo</div>
                     </div>
                     <div class="storage">
                         Larger storage Extra 1TB of cloud save +$2/mo
