--- a/index.html
+++ b/index.html
@@ -118,10 +118,18 @@
                         <div class="price1"> +$1/mo</div>
                     </div>
                     <div class="storage">
-                        Larger storage Extra 1TB of cloud save +$2/mo
+                        <div class="service2">
+                            <h3>Larger storage</h3>
+                            <p>Extra 1TB of cloud save</p>
+                        </div>
                     </div>
+                    <div class="price2">+$2/mo</div>
                     <div class="profile">
-                        Customizable Profile Custom theme on your profile +$2/mo
+                        <div class="service3">
+                            <h3>Customizable Profile</h3>
+                            <p>Custom theme on your profile</p>
+                        </div>
+                        <div class="price3">+$2/mo</div>
                     </div>
                 </div>
                 <div class="navigation-buttons">
