--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
                 <p>Add-ons help enhance your gaming experience.</p>
                 <div class="addons">
                     <div class="online">
+                        <input type="checkbox" id="online-service" name="online-service" value="online-service">
                         <div class="service">
                             <h3>Online service</h3>
                             <p>Access to multiplayer games</p>
@@ -118,13 +119,15 @@
                         <div class="price1"> +$1/mo</div>
                     </div>
                     <div class="storage">
+                        <input type="checkbox" id="larger-storage" name="larger-storage" value="larger-storage">
                         <div class="service2">
                             <h3>Larger storage</h3>
                             <p>Extra 1TB of cloud save</p>
                         </div>
+                        <div class="price2">+$2/mo</div>
                     </div>
-                    <div class="price2">+$2/mo</div>
                     <div class="profile">
+                        <input type="checkbox" id="custom-profile" name="custom-profile" value="custom-profile">
                         <div class="service3">
                             <h3>Customizable Profile</h3>
                             <p>Custom theme on your profile</p>
