--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <label for="phone">Phone Number</label>
                         <input type="tel" id="phone" name="phone" required placeholder="e.g. +1 234 567 890">
                     </div>
-                    <button type="button" class="btn-next" id="next">Next Step</button>
+                    <button type="button" class="btn-next" id="next-personal-info">Next Step</button>
                 </div>
             </form>
             <!-- Step 2 start -->
@@ -98,7 +98,7 @@
                 </div>
                 <div class="navigation-buttons">
                     <button class="back">Go Back </button>
-                    <button type="button" class="btn-next" id="next">Next Step</button>
+                    <button type="button" class="btn-next" id="next-plan">Next Step</button>
 
                 </div>
             </div>
@@ -137,7 +137,7 @@
                 </div>
                 <div class="navigation-buttons">
                     <button class="back">Go Back </button>
-                    <button type="button" class="btn-next" id="next">Next Step</button>
+                    <button type="button" class="btn-next" id="next-addon">Next Step</button>
 
                 </div>
             </div>
@@ -154,7 +154,7 @@
                 </div>
                 <div class="navigation-buttons">
                     <button class="back">Go Back </button>
-                    <button type="button" class="btn-next" id="next">Confirm</button>
+                    <button type="button" class="btn-next" id="next-finish">Confirm</button>
                 </div>
             </div>
 
