--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     </div>
                 </div>
                 <div class="navigation-buttons">
-                    <button class="back">Go Back </button>
+                    <button type="button" class="back" id="back-one">Go Back </button>
                     <button type="button" class="btn-next" id="next-plan">Next Step</button>
 
                 </div>
@@ -136,7 +136,7 @@
                     </div>
                 </div>
                 <div class="navigation-buttons">
-                    <button class="back">Go Back </button>
+                    <button type="button" class="back" id="back-two">Go Back </button>
                     <button type="button" class="btn-next" id="next-addon">Next Step</button>
 
                 </div>
@@ -153,7 +153,7 @@
                     Total (per month/year)
                 </div>
                 <div class="navigation-buttons">
-                    <button class="back">Go Back </button>
+                    <button type="button" class="back" id="back-three">Go Back </button>
                     <button type="button" class="btn-next" id="next-finish">Confirm</button>
                 </div>
             </div>
