--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         </div>
                         <div class="price2">+$2/mo</div>
                     </div>
-                    <div class="profile">
+                    <div class="profile" id="profile">
                         <input type="checkbox" id="custom-profile" name="custom-profile" value="custom-profile">
                         <div class="service3">
                             <h3>Customizable Profile</h3>
