--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             </div>
             <!-- Step 3 end -->
             <!-- Step 4 start -->
-            <div class="finish hide" id="finish">
+            <div class="summary hide" id="summary">
                 <h2>Finishing up</h2>
                 <p>Double-check everything looks OK before confirming.</p>
                 <!-- Dynamically add subscription and add-on selections here -->
