--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
             <!-- Step 4 end -->
             <!-- Step 5 start -->
             <div class="step-5 hide" id="confirmation">
+                <img src="./assets/images/icon-thank-you.svg" alt="Checkmark">
                 <h2>Thank you!</h2>
                 <p>Thanks for confirming your subscription! We hope you have fun using our platform.</p>
                 <p>If you ever need support, please feel free to email us at support@loremgaming.com.
