--- a/index.html
+++ b/index.html
@@ -167,9 +167,7 @@
             <div class="step-5 hide" id="confirmation">
                 <img src="./assets/images/icon-thank-you.svg" alt="Checkmark">
                 <h2>Thank you!</h2>
-                <p>Thanks for confirming your subscription! We hope you have fun using our platform.</p>
-                <p>If you ever need support, please feel free to email us at support@loremgaming.com.
-                </p>
+                <p>Thanks for confirming your subscription! We hope you have fun using our platform. If you ever need support, please feel free to email us at support@loremgaming.com.</p>
             </div>
             <!-- Step 5 end -->
         </div>
