--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <p>Please provide your name, email address, and phone number.</p>
                     <div class="input-group">
                         <label for="name">Name</label>
-                        <input type="text" id="name" name="name" required placeholder="e.g. Stephen King">
+                        <input type="text" id="name" name="name" placeholder="e.g. Stephen King" required>
                     </div>
                     <div class="input-group">
                         <label for="email">Email Address</label>
