--- a/index.html
+++ b/index.html
@@ -154,8 +154,33 @@
                 <h2>Finishing up</h2>
                 <p>Double-check everything looks OK before confirming.</p>
                 <!-- Dynamically add subscription and add-on selections here -->
-                <div class="total">
-                    Total (per month/year)
+                <div class="subscription">
+                    <div class="plan-subscribed">
+                        <div class="plan">
+                            plan(monthly/yearly)
+                        </div>
+                        <div class="price-plan">
+                            $price/(mo/yr)
+                        </div>
+                    </div>
+
+                    <div class="rectangle"></div>
+                    <div class="addons-subscribed">
+                        <div class="addon-chosen">
+                            Add-on
+                        </div>
+                        <div class="price-addon">
+                            $price/(mo/yr)
+                        </div>
+                    </div>
+                </div>
+                <div class="total-subscribed">
+                    <div class="total">
+                        Total
+                    </div>
+                    <div class="price-total">
+                        $price/(mo/yr)
+                    </div>
                 </div>
                 <div class="navigation-buttons">
                     <button type="button" class="back" id="back-three">Go Back </button>
