--- a/index.html
+++ b/index.html
@@ -154,33 +154,24 @@
                 <h2>Finishing up</h2>
                 <p>Double-check everything looks OK before confirming.</p>
                 <!-- Dynamically add subscription and add-on selections here -->
-                <div class="subscription">
-                    <div class="plan-subscribed">
-                        <div class="plan">
-                            plan(monthly/yearly)
-                        </div>
-                        <div class="price-plan">
-                            $price/(mo/yr)
-                        </div>
+                <div class="plan-subscribed">
+                    <div class="plan">
+                        <!-- dynamic -->
                     </div>
-
-                    <div class="rectangle"></div>
-                    <div class="addons-subscribed">
-                        <div class="addon-chosen">
-                            Add-on
-                        </div>
-                        <div class="price-addon">
-                            $price/(mo/yr)
-                        </div>
+                    <div class="price">
+                        <!-- dynamic -->
                     </div>
                 </div>
-                <div class="total-subscribed">
-                    <div class="total">
-                        Total
+                <div class="addons-subscribed">
+                    <div class="addon">
+                        <!-- dynamic -->
                     </div>
-                    <div class="price-total">
-                        $price/(mo/yr)
+                    <div class="price">
+                        <!-- dynamic -->
                     </div>
+                </div>
+                <div class="total">
+                    Total (per month/year)
                 </div>
                 <div class="navigation-buttons">
                     <button type="button" class="back" id="back-three">Go Back </button>
