--- a/index.html
+++ b/index.html
@@ -154,24 +154,31 @@
                 <h2>Finishing up</h2>
                 <p>Double-check everything looks OK before confirming.</p>
                 <!-- Dynamically add subscription and add-on selections here -->
-                <div class="plan-subscribed">
-                    <div class="plan">
-                        <!-- dynamic -->
+                <div class="subscription">
+                    <div class="plan-subscribed">
+                        <div class="plan">
+                            <!-- dynamic -->
+                        </div>
+                        <div class="price">
+                            <!-- dynamic -->
+                        </div>
+                    </div>
+                    <div class="addons-subscribed">
+                        <div class="addon">
+                            <!-- dynamic -->
+                        </div>
+                        <div class="price">
+                            <!-- dynamic -->
+                        </div>
+                    </div>
+                </div>
+                <div class="total-subscribed">
+                    <div class="total">
+                        Total (per month/year)
                     </div>
                     <div class="price">
                         <!-- dynamic -->
                     </div>
-                </div>
-                <div class="addons-subscribed">
-                    <div class="addon">
-                        <!-- dynamic -->
-                    </div>
-                    <div class="price">
-                        <!-- dynamic -->
-                    </div>
-                </div>
-                <div class="total">
-                    Total (per month/year)
                 </div>
                 <div class="navigation-buttons">
                     <button type="button" class="back" id="back-three">Go Back </button>
