--- a/index.html
+++ b/index.html
@@ -71,24 +71,32 @@
             </form>
             <!-- Step 2 start -->
             <div class="plan hide" id="plan">
-                <h2>Select your plan</h2>
-                <p>You have the option of monthly or yearly billing.</p>
+                <div class="sel">
+                    <h2>Select your plan</h2>
+                    <p>You have the option of monthly or yearly billing.</p>
+                </div>
                 <div class="plans">
                     <div class="types">
                         <div class="arcade">
                             <img src="./assets/images/icon-arcade.svg" alt="Arcade">
-                            <div class="arc">Arcade </div>
-                            <div class="price"> $9/mo</div>
+                            <div class="arca">
+                                <div class="arc">Arcade </div>
+                                <div class="price"> $9/mo</div>
+                            </div>
                         </div>
                         <div class="advanced">
                             <img src="./assets/images/icon-advanced.svg" alt="Advanced">
-                            <div class="ad">Advanced</div>
-                            <div class="price2"> $12/mo</div>
+                            <div class="adva">
+                                <div class="ad">Advanced</div>
+                                <div class="price2"> $12/mo</div>
+                            </div>
                         </div>
                         <div class="pro">
                             <img src="./assets/images/icon-pro.svg" alt="Pro">
-                            <div class="pr">Pro</div>
-                            <div class="price3"> $15/mo</div>
+                            <div class="proa">
+                                <div class="pr">Pro</div>
+                                <div class="price3"> $15/mo</div>
+                            </div>
                         </div>
                     </div>
                     <div class="time-period">
